Closed Bug 1616186 Opened 6 years ago Closed 6 years ago

Crash in [@ mozilla::scache::StartupCache::MaybeInitShutdownWrite]

Categories

(Core :: XPCOM, defect)

Unspecified
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla75
Tracking Status
firefox-esr68 --- unaffected
firefox73 --- unaffected
firefox74 --- unaffected
firefox75 --- fixed

People

(Reporter: gsvelto, Assigned: alexical)

References

(Regression)

Details

(Keywords: crash, regression)

Crash Data

Attachments

(1 file)

This bug is for crash report bp-d1a8ade7-081c-40d9-96f8-9bd9a0200217.

Top 10 frames of crashing thread:

0 libxul.so mozilla::scache::StartupCache::MaybeInitShutdownWrite startupcache/StartupCache.cpp:598
1 libxul.so nsAppStartup::Quit toolkit/components/startup/nsAppStartup.cpp:367
2 libxul.so nsNativeAppSupportUnix::DieCB toolkit/xre/nsNativeAppSupportUnix.cpp:356
3 libSM.so.6.0.1 _SmcProcessMessage 
4 libICE.so.6.3.0 IceProcessMessages 
5 libxul.so ice_iochannel_watch toolkit/xre/nsNativeAppSupportUnix.cpp:182
6 libglib-2.0.so.0.6200.4 g_main_context_dispatch 
7 libglib-2.0.so.0.6200.4 g_main_context_acquire 
8 libglib-2.0.so.0.6200.4 g_main_context_iteration 
9 libxul.so nsBaseAppShell::OnProcessNextEvent widget/nsBaseAppShell.cpp:259

NULL-pointer dereference of the this pointer from the looks of it, probably a regression from bug 1607505.

Doug can you have a look?

Flags: needinfo?(dothayer)

The exact circumstances of how this is showing up in the wild aren't
clear - there seem to be a couple of ways we can get here. However it
all revolves around early shutdowns (i.e., from the select profile popup)

  • before the StartupCache is ever initialized. In any case, the solution
    shouldn't change based on the exact circumstances - if we don't have a
    StartupCache, there's no need to write one. Also, don't bother lazy
    initializing it if it doesn't exist yet.
Assignee: nobody → dothayer
Status: NEW → ASSIGNED
Pushed by dothayer@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/679b52ee70c7 Don't try to write StartupCache if it doesn't exist r=froydnj
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla75
Flags: needinfo?(dothayer)
Has Regression Range: --- → yes
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: